<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rorysoft.lyricgrab.MainActivity">

    <EditText
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/search_hint"
        android:textSize="@dimen/search_text_size"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/search"
        android:layout_toEndOf="@+id/search"
        android:text="@string/search_button_text"
        android:textSize = "@dimen/button_text_size"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/recycler_view_margins"
            android:layout_marginStart="@dimen/recycler_view_margins"
            android:layout_marginRight="@dimen/recycler_view_margins"
            android:layout_marginEnd="@dimen/recycler_view_margins"
            android:layout_marginBottom="@dimen/recycler_view_margin_bottom">
        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/next_button"
            android:textSize = "@dimen/button_text_size"/>

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/prev_button"
            android:textSize = "@dimen/button_text_size"/>

</RelativeLayout>
